--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,10 +7,10 @@
 
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %>
+  <div><%= f.label :password, t('new_password') %>
   <%= f.password_field :password, :autofocus => true %></div><br />
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %>
+  <div><%= f.label :password_confirmation, t('confirm_new_password') %>
   <%= f.password_field :password_confirmation %></div><br />
 
   <div><%= f.submit t('change_password'), class: "btn btn-primary" %></div>
