--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="secondaryNav-inner pull-left">
-  <%= link_to t('dissertation'), root_path, id: "logo" %>
+  <%= link_to t('home_page'), root_path, id: "logo" %>
 </div>
 
 <%= render 'layouts/languages' %>
