--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p> Γειά σας <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Κάποιος έχει ζητήσει ένα link για αλλαγή του κωδικού σας. Πατήστε το παρακάτω link αν θέλετε να προχωρήσετε.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @token) %></p>
+<p><%= link_to 'Αλλαγή Κωδικού', edit_password_url(@resource, :reset_password_token => @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Αν δεν το ζητήσατε εσείς, παρακαλώ αγνοήστε αυτό το email.</p>
+<p>Ο κωδικός σας δεν θα αλλάξει μέχρι να χρησιμοποιήσετε το παραπάνω link και να δημιουγήσετε ένα καινούριο κωδίκο.</p>
