--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, t('users')) %>
 <h1><%= t('users') %></h1>
+<h2><%= t('and_files') %></h2>
 
 <ul class="users">
   <%= render "shared/all_data_for_admin"%>
