--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -6,28 +6,37 @@
 
     <% @subfolders.each do |subfolder| %>
       <tr>
-        <td>F - <%= link_to subfolder.name, folder_path(subfolder) %></td>
+        <td width="50" style="text-align:center">
+          <%= image_tag("folder.png",size: "35x35", :alt => "Folder") %>
+        </td>
+        <td><%= link_to subfolder.name, folder_path(subfolder) %></td>
         <td><%= link_to t('edit'), edit_folder_path(subfolder) %></td>
-        <td><%= link_to t('delete'), subfolder, method: :delete, class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
+        <td width="70"><%= link_to t('delete'), subfolder, method: :delete, class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
       </tr>
     <% end %>
 
     <% @archives.each do |archive| %>
       <tr>
-        <td>A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %></td>
+        <td width="50"  style="text-align:center">
+          <%= image_tag("archive.png",size: "35x35", :alt => "Folder") %>
+        </td>
+        <td><%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %></td>
         <td>
           <%= link_to t('edit'), edit_folder_archive_path(archive.folder_id, archive.id) %> |
           <%= link_to t('download'), folder_archive_path(archive.folder_id, archive.id,format: "docx") %>
         </td>
-        <td><%= link_to t('delete'), folder_archive_path(archive.folder_id, archive.id), method: :delete, class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
+        <td width="70"><%= link_to t('delete'), folder_archive_path(archive.folder_id, archive.id), method: :delete, class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
       </tr>
     <% end %>
 
     <% @uploads.each do |upload|%>
       <tr>
-        <td>U - <%= link_to upload.attachment, folder_upload_path(upload.folder_id, upload.id) %></td>
+        <td width="50"  style="text-align:center">
+          <%= image_tag("upload.png",size: "35x35", :alt => "Folder") %>
+        </td>
+        <td><%= link_to upload.attachment, folder_upload_path(upload.folder_id, upload.id) %></td>
         <td><%= link_to t('download'), upload.attachment_url %></td>
-        <td><%= link_to t('delete'), folder_upload_path(upload.folder_id, upload.id), method: :delete,  class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
+        <td width="70"><%= link_to t('delete'), folder_upload_path(upload.folder_id, upload.id), method: :delete,  class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
       </tr>
     <% end %>
   </tbody>
