Allow different types of files to upload and open uploads to a new page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <div class="container">
         <%= render 'layouts/main_menu' %>
         <br>
-        <%= render 'layouts/secondary_menu' %>
+        <%= render 'layouts/languages' %>
       </div>
     </div>
   </div>
