--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -2,6 +2,6 @@
   <%= link_to t('home_page'), root_path, id: "logo" %>
 </div>
 
-<%= render 'layouts/languages' %>
+<%= render 'layouts/secondary_menu' %>
 
 
