--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title,@folder.name) %>
-<h2>Folder : <%= @folder.name %></h2>
+<h2><%= t('activerecord.models.folder') %> : <%= @folder.name %></h2>
+
+<% if @subfolders.count == 0 && @archives.count == 0 && @uploads.count ==0 %>
+  <p><strong><%= t('empty_folder') %></strong></p>
+<% end %>
 
 <table class = "table table-bordered table-striped">
   <tbody>
@@ -34,7 +38,7 @@
         <td width="50"  style="text-align:center">
           <%= image_tag("upload.png",size: "35x35", :alt => "Folder") %>
         </td>
-        <td><%= link_to upload.attachment, upload.attachment_url, :target => "_blank" %></td>
+        <td><%= link_to upload.attachment_identifier, upload.attachment_url, :target => "_blank" %></td>
         <td><%= link_to t('download'), download_folder_upload_path(upload.folder_id, upload.id) %></td>
         <td width="70"><%= link_to t('delete'), folder_upload_path(upload.folder_id, upload.id), method: :delete,  class: "btn btn-small btn-danger", data: { confirm: "#{t('confirm')}" } %></td>
       </tr>
